Updates the SalesAPI

--- a/SalesAPI.properties
+++ b/SalesAPI.properties
@@ -1,7 +1,4 @@
 sales.uri = http://localhost:8100/invoices
 spring.datasource.url=jdbc:mysql://localhost:3306/SalesDatabase?serverTimezone=CST
 server.port = 8200
-spring.application.SalesAPI
-
-
-
+spring.application.name = SalesAPI
