--- a/InvoiceMS.properties
+++ b/InvoiceMS.properties
@@ -1,6 +1,6 @@
 invoice.uri = http://localhost:8100/invoices
 spring.datasource.url=jdbc:mysql://localhost:3306/Invoice?serverTimezone=CST
-server.port = 8100
+server.port=${PORT:0}
 spring.application.name=InvoiceMs
 
 
