--- a/SalesAPI.properties
+++ b/SalesAPI.properties
@@ -1,4 +1,4 @@
 sales.uri = http://localhost:8200/users
 spring.datasource.url=jdbc:mysql://localhost:3306/SalesDatabase?serverTimezone=CST
-server.port = 8200
+server.port=${PORT:0}
 spring.application.name = SalesAPI
