--- a/SalesAPI.properties
+++ b/SalesAPI.properties
@@ -1,5 +1,4 @@
-sales.uri = http://localhost:8200/users
 spring.datasource.url=jdbc:mysql://localhost:3306/SalesDatabase?serverTimezone=CST
 server.port=${PORT:0}
 spring.application.name = SalesAPI
-eureka.instance.instance-id=$(spring.cloud.client.hostname):$(spring.application.name):$(spring.application.instance_id:$(random.value))
+eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
